add: 租户相关接口
